--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
   "dependencies": {
     "async": "^0.8.0",
     "express": "^3.5.2",
-    "express-jsonstream": "0.0.3",
     "hostbyname": "^0.1.0",
     "jade": "^1.3.1",
     "mongoose": "^3.8.12",
     "mongoose-list": "^0.2.1",
     "mongoose-validator": "^0.2.2",
     "net-ping": "^1.1.10",
-    "object-manage": "^0.7.1"
+    "object-manage": "^0.7.1",
+    "socket.io": "^1.0.4"
   },
   "devDependencies": {
     "jshint-stylish": "^0.2.0"
