--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "type": "git",
     "url": "https://github.com/eSited/ping.ms.git"
   },
-  "main": "pingms-mux.js",
+  "main": "app.js",
   "keywords": [
     "ping.ms",
     "ping",
     "traceroute",
     "drone",
+    "bot",
     "network",
     "route",
     "monitoring",
@@ -24,18 +25,26 @@
     "node": ">=0.10.0"
   },
   "dependencies": {
-    "async": "^0.8.0",
-    "express": "^3.5.2",
+    "async": "~0.2.10",
+    "bcrypt": "^0.7.8",
+    "cli-table": "~0.3.0",
+    "commander": "~2.1.0",
+    "connect-flash": "^0.1.1",
+    "connect-redis": "1.4.7",
+    "express": "~3.4.8",
     "hostbyname": "^0.1.0",
-    "jade": "^1.3.1",
-    "mongoose": "^3.8.12",
-    "mongoose-list": "^0.2.1",
+    "jade": "^1.3.0",
+    "markdown": "^0.5.0",
+    "mkdirp": "^0.5.0",
+    "moment": "^2.6.0",
+    "mongoose": "3.8.8",
+    "mongoose-list": "~0.2.1",
+    "mongoose-merge-plugin": "0.0.4",
     "mongoose-validator": "^0.2.2",
     "net-ping": "^1.1.10",
-    "object-manage": "^0.7.1",
-    "socket.io": "^1.0.4"
-  },
-  "devDependencies": {
-    "jshint-stylish": "^0.2.0"
+    "object-manage": "~0.7.1",
+    "socket.io": "^1.0.4",
+    "validator": "^3.7.0",
+    "winston": "^0.7.3"
   }
 }
