--- a/admin/bower.json
+++ b/admin/bower.json
@@ -1,10 +1,9 @@
 {
-  "name": "animegg",
-  "version": "0.2.0",
+  "name": "pingms-admin",
+  "version": "2.0.0",
   "dependencies": {
     "bootstrap": "~3.0.3",
     "html5-boilerplate": "latest",
-    "jquery": "~1.10.2",
-    "pickadate": "~3.5.2"
+    "jquery": "~1.10.2"
   }
 }
