--- a/admin/bower.json
+++ b/admin/bower.json
@@ -2,8 +2,9 @@
   "name": "pingms-admin",
   "version": "2.0.0",
   "dependencies": {
-    "bootstrap": "~3.0.3",
-    "html5-boilerplate": "latest",
-    "jquery": "~1.10.2"
+    "bootstrap": "~3.1.1",
+    "bootstrap-multiselect": "~0.9.4",
+    "html5-boilerplate": "~4.3.0",
+    "jquery": "~2.1.1"
   }
 }
