--- a/admin/bower.json
+++ b/admin/bower.json
@@ -5,6 +5,6 @@
     "bootstrap": "~3.1.1",
     "bootstrap-multiselect": "~0.9.4",
     "html5-boilerplate": "~4.3.0",
-    "jquery": "~2.1.1"
+    "pGenerator": "~1.0.2"
   }
 }
