Bot fires up and connects to 'main' socket of mux

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "net-ping": "^1.1.10",
     "object-manage": "~0.7.1",
     "socket.io": "^1.0.5",
+    "socket.io-client": "^1.0.5",
     "validator": "^3.7.0",
     "winston": "^0.7.3"
   }
