--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   "dependencies": {
     "async": "^0.2.10",
     "bcrypt": "^0.7.8",
+    "caterpillar": "^2.0.7",
+    "caterpillar-filter": "^2.0.3",
+    "caterpillar-human": "^2.1.2",
     "cli-table": "^0.3.0",
     "commander": "^2.1.0",
     "connect-flash": "^0.1.1",
@@ -46,7 +49,6 @@
     "shortid": "^2.0.0",
     "socket.io": "^1.0.5",
     "socket.io-client": "^1.0.5",
-    "validator": "^3.7.0",
-    "winston": "^0.7.3"
+    "validator": "^3.7.0"
   }
 }
