--- a/main/bower.json
+++ b/main/bower.json
@@ -5,6 +5,7 @@
     "bootstrap": "~3.1.1",
     "html5-boilerplate": "~4.3.0",
     "moment": "~2.7.0",
-    "underscore": "~1.6.0"
+    "underscore": "~1.6.0",
+    "handlebars": "~1.3.0"
   }
 }
