--- a/package.json
+++ b/package.json
@@ -39,13 +39,14 @@
     "jade": "^1.3.0",
     "markdown": "^0.5.0",
     "mkdirp": "^0.5.0",
-    "moment": "^2.6.0",
+    "moment": "^2.7.0",
     "mongoose": "~3.8.8",
     "mongoose-list": "^0.2.1",
     "mongoose-merge-plugin": "^0.0.4",
     "mongoose-validator": "^0.2.2",
     "net-ping": "^1.1.10",
     "object-manage": "^0.7.1",
+    "pkginfo": "^0.3.0",
     "shortid": "^2.0.0",
     "socket.io": "^1.0.5",
     "socket.io-client": "^1.0.5",
