--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "net-ping": "^1.1.10",
     "object-manage": "^0.7.1",
     "pkginfo": "^0.3.0",
+    "redis": "^0.11.0",
     "shortid": "^2.0.0",
     "socket.io": "^1.0.5",
     "socket.io-client": "^1.0.5",
