--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "node": ">=0.10.0"
   },
   "dependencies": {
-    "async": "^0.2.10",
+    "async": "^0.8.0",
     "bcrypt": "^0.7.8",
     "caterpillar": "^2.0.7",
     "caterpillar-filter": "^2.0.3",
@@ -34,10 +34,12 @@
     "commander": "^2.1.0",
     "connect-flash": "^0.1.1",
     "connect-redis": "~1.4.7",
+    "debug": "^1.0.4",
     "express": "~3.4.8",
     "hostbyname": "^0.1.0",
     "ip": "^0.3.1",
-    "irc-factory": "^1.8.8",
+    "irc-channels": "^3.6.2",
+    "irc-connect": "^2.1.2",
     "jade": "^1.3.0",
     "markdown": "^0.5.0",
     "mkdirp": "^0.5.0",
