--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "node": ">=0.10.0"
   },
   "dependencies": {
-    "async": "^0.8.0",
-    "bcrypt": "^0.7.8",
+    "async": "^0.9.0",
+    "bcrypt": "^0.8.0",
     "caterpillar": "^2.0.7",
     "caterpillar-filter": "^2.0.3",
     "caterpillar-human": "^2.1.2",
@@ -39,7 +39,8 @@
     "hostbyname": "^0.1.0",
     "ip": "^0.3.1",
     "irc-channels": "^3.6.2",
-    "irc-connect": "^2.1.2",
+    "irc-connect": "git+https://github.com/Spudz76/irc-connect.git#master",
+    "irc-connect-ctcp": "~0.0.2",
     "jade": "^1.3.0",
     "markdown": "^0.5.0",
     "mkdirp": "^0.5.0",
@@ -51,7 +52,7 @@
     "net-ping": "^1.1.10",
     "object-manage": "^0.7.1",
     "pkginfo": "^0.3.0",
-    "redis": "^0.11.0",
+    "redis": "^0.12.1",
     "shortid": "^2.0.0",
     "socket.io": "^1.0.5",
     "validator": "^3.7.0"
