--- a/package.json
+++ b/package.json
@@ -25,36 +25,41 @@
     "node": ">=0.10.0"
   },
   "dependencies": {
-    "async": "^0.9.0",
-    "bcrypt": "^0.8.0",
-    "caterpillar": "^2.0.7",
-    "caterpillar-filter": "^2.0.3",
-    "caterpillar-human": "^2.1.2",
-    "cli-table": "^0.3.0",
-    "commander": "^2.1.0",
-    "connect-flash": "^0.1.1",
-    "connect-redis": "~1.4.7",
-    "debug": "^1.0.4",
-    "express": "~3.4.8",
-    "hostbyname": "^0.1.0",
-    "ip": "^0.3.1",
-    "irc-channels": "^3.6.2",
+    "async": "0.9.x",
+    "bcrypt": "0.8.x",
+    "body-parser": "1.6.x",
+    "caterpillar": "2.0.x",
+    "caterpillar-filter": "2.0.x",
+    "caterpillar-human": "2.1.x",
+    "cli-table": "0.3.x",
+    "commander": "2.3.x",
+    "connect-flash": "0.1.x",
+    "connect-redis": "<1.5.0",
+    "cookie-parser": "1.3.x",
+    "debug": "1.0.x",
+    "express": "<4.0.0",
+    "express-session": "1.7.x",
+    "hostbyname": "0.1.x",
+    "ip": "0.3.x",
+    "irc-channels": "3.6.x",
     "irc-connect": "git+https://github.com/Spudz76/irc-connect.git#master",
-    "irc-connect-ctcp": "~0.0.2",
-    "jade": "^1.3.0",
-    "markdown": "^0.5.0",
-    "mkdirp": "^0.5.0",
-    "moment": "^2.7.0",
-    "mongoose": "~3.8.8",
-    "mongoose-list": "^0.2.1",
-    "mongoose-merge-plugin": "^0.0.4",
-    "mongoose-validator": "^0.2.2",
-    "net-ping": "^1.1.10",
-    "object-manage": "^0.7.1",
-    "pkginfo": "^0.3.0",
-    "redis": "^0.12.1",
-    "shortid": "^2.0.0",
-    "socket.io": "^1.0.5",
-    "validator": "^3.7.0"
+    "irc-connect-ctcp": "0.0.x",
+    "jade": "1.5.x",
+    "markdown": "0.5.x",
+    "method-override": "2.1.x",
+    "mkdirp": "0.5.x",
+    "moment": "2.8.x",
+    "mongoose": "3.8.x",
+    "mongoose-list": "0.2.x",
+    "mongoose-merge-plugin": "0.0.x",
+    "mongoose-validator": "<1.0.0",
+    "morgan": "1.2.x",
+    "net-ping": "1.1.x",
+    "object-manage": "0.7.x",
+    "pkginfo": "0.3.x",
+    "redis": "0.12.x",
+    "shortid": "2.0.x",
+    "socket.io": "1.0.x",
+    "validator": "3.17.x"
   }
 }
