--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "hostbyname": "0.1.x",
     "ip": "0.3.x",
     "irc-channels": "3.6.x",
-    "irc-connect": "git+https://github.com/Spudz76/irc-connect.git#master",
-    "irc-connect-ctcp": "0.0.x",
+    "irc-connect": "2.1.x",
+    "irc-connect-ctcp": "0.1.x",
     "jade": "1.5.x",
     "markdown": "0.5.x",
     "method-override": "2.1.x",
