--- a/package.json
+++ b/package.json
@@ -27,39 +27,41 @@
   "dependencies": {
     "async": "0.9.x",
     "bcrypt": "0.8.x",
-    "body-parser": "1.6.x",
+    "body-parser": "1.7.x",
     "caterpillar": "2.0.x",
     "caterpillar-filter": "2.0.x",
     "caterpillar-human": "2.1.x",
     "cli-table": "0.3.x",
     "commander": "2.3.x",
     "connect-flash": "0.1.x",
-    "connect-redis": "<1.5.0",
+    "connect-redis": "2.1.x",
     "cookie-parser": "1.3.x",
-    "debug": "1.0.x",
-    "express": "<4.0.0",
+    "debug": "2.0.x",
+    "errorhandler": "^1.2.0",
+    "express": "4.8.x",
     "express-session": "1.7.x",
+    "generic-pool": "2.1.x",
     "hostbyname": "0.1.x",
     "ip": "0.3.x",
     "irc-channels": "3.6.x",
     "irc-connect": "2.1.x",
     "irc-connect-ctcp": "0.1.x",
-    "jade": "1.5.x",
+    "jade": "1.6.x",
     "markdown": "0.5.x",
-    "method-override": "2.1.x",
+    "method-override": "2.2.x",
     "mkdirp": "0.5.x",
     "moment": "2.8.x",
     "mongoose": "3.8.x",
     "mongoose-list": "0.2.x",
     "mongoose-merge-plugin": "0.0.x",
     "mongoose-validator": "<1.0.0",
-    "morgan": "1.2.x",
+    "morgan": "1.3.x",
     "net-ping": "1.1.x",
-    "object-manage": "0.7.x",
+    "object-manage": "0.8.x",
     "pkginfo": "0.3.x",
     "redis": "0.12.x",
     "shortid": "2.0.x",
-    "socket.io": "1.0.x",
+    "socket.io": "1.1.x",
     "validator": "3.17.x"
   }
 }
