--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "async": "0.9.x",
     "bcrypt": "0.8.x",
-    "body-parser": "1.7.x",
+    "body-parser": "1.8.x",
     "caterpillar": "2.0.x",
     "caterpillar-filter": "2.0.x",
     "caterpillar-human": "2.1.x",
@@ -37,9 +37,9 @@
     "connect-redis": "2.1.x",
     "cookie-parser": "1.3.x",
     "debug": "2.0.x",
-    "errorhandler": "^1.2.0",
-    "express": "4.8.x",
-    "express-session": "1.7.x",
+    "errorhandler": "1.2.x",
+    "express": "4.9.x",
+    "express-session": "1.8.x",
     "generic-pool": "2.1.x",
     "hostbyname": "0.1.x",
     "ip": "0.3.x",
@@ -62,6 +62,6 @@
     "redis": "0.12.x",
     "shortid": "2.0.x",
     "socket.io": "1.1.x",
-    "validator": "3.17.x"
+    "validator": "3.18.x"
   }
 }
