--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "ping.ms <admins@ping.ms>",
   "name": "ping.ms",
   "description": "ping.ms system",
-  "version": "2.0.3",
+  "version": "3.0.0",
   "homepage": "http://ping.ms/",
   "repository": {
     "type": "git",
@@ -25,43 +25,16 @@
     "node": ">=0.10.0"
   },
   "dependencies": {
-    "async": "0.9.x",
-    "bcrypt": "0.8.x",
-    "body-parser": "1.8.x",
+    "bluebird": "^0.11.6",
     "caterpillar": "2.0.x",
     "caterpillar-filter": "2.0.x",
     "caterpillar-human": "2.1.x",
-    "cli-table": "0.3.x",
-    "commander": "2.3.x",
-    "connect-flash": "0.1.x",
-    "connect-redis": "2.1.x",
-    "cookie-parser": "1.3.x",
     "debug": "2.0.x",
-    "errorhandler": "1.2.x",
-    "express": "4.9.x",
-    "express-session": "1.8.x",
-    "generic-pool": "2.1.x",
-    "hostbyname": "0.1.x",
-    "ip": "0.3.x",
-    "irc-channels": "3.6.x",
-    "irc-connect": "2.1.x",
-    "irc-connect-ctcp": "0.1.x",
-    "jade": "1.6.x",
-    "markdown": "0.5.x",
-    "method-override": "2.2.x",
-    "mkdirp": "0.5.x",
-    "moment": "2.8.x",
-    "mongoose": "3.8.x",
-    "mongoose-list": "0.2.x",
-    "mongoose-merge-plugin": "0.0.x",
-    "mongoose-validator": "<1.0.0",
-    "morgan": "1.3.x",
+    "express": "^4.9.5",
+    "graceful-fs": "^3.0.3",
+    "infant": "^0.8.1",
     "net-ping": "1.1.x",
     "object-manage": "0.8.x",
-    "pkginfo": "0.3.x",
-    "redis": "0.12.x",
-    "shortid": "2.0.x",
-    "socket.io": "1.1.x",
-    "validator": "3.18.x"
+    "socket.io": "1.1.x"
   }
 }
