added app loader to start and stop the app

--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "caterpillar": "2.0.x",
     "caterpillar-filter": "2.0.x",
     "caterpillar-human": "2.1.x",
+    "commander": "^2.3.0",
     "debug": "2.0.x",
     "express": "4.9.x",
     "graceful-fs": "3.0.x",
     "infant": "0.8.x",
+    "mkdirp": "^0.5.0",
     "net-ping": "1.1.x",
     "object-manage": "0.8.x",
     "promisepipe": "1.0.x",
