--- a/package.json
+++ b/package.json
@@ -29,18 +29,30 @@
     "amp-message": "^0.1.2",
     "axon": "2.0.x",
     "bluebird": "0.11.x",
+    "body-parser": "^1.9.0",
     "caterpillar": "2.0.x",
     "caterpillar-filter": "2.0.x",
     "caterpillar-human": "2.1.x",
-    "commander": "^2.3.0",
+    "cli-table": "0.3.x",
+    "commander": "2.3.x",
+    "connect-flash": "^0.1.1",
+    "connect-redis": "^2.1.0",
+    "cookie-parser": "^1.3.3",
     "debug": "2.0.x",
     "express": "4.9.x",
+    "express-session": "^1.8.2",
     "graceful-fs": "3.0.x",
     "infant": "0.8.x",
+    "jade": "^1.7.0",
+    "markdown": "^0.5.0",
     "mkdirp": "^0.5.0",
+    "mongoose": "3.8.x",
+    "mongoose-list": "0.2.x",
     "net-ping": "1.1.x",
     "object-manage": "0.8.x",
     "promisepipe": "1.0.x",
+    "redis": "^0.12.1",
+    "shortid": "^2.0.1",
     "socket.io": "1.1.x",
     "through2": "0.6.x",
     "validator": "3.19.x"
