--- a/package.json
+++ b/package.json
@@ -26,34 +26,43 @@
   },
   "dependencies": {
     "amp": "0.3.x",
-    "amp-message": "^0.1.2",
+    "amp-message": "0.1.x",
+    "async": "0.9.x",
     "axon": "2.0.x",
-    "bluebird": "0.11.x",
-    "body-parser": "^1.9.0",
+    "basic-auth": "1.0.x",
+    "bluebird": "2.3.x",
+    "body-parser": "1.9.x",
     "caterpillar": "2.0.x",
     "caterpillar-filter": "2.0.x",
     "caterpillar-human": "2.1.x",
     "cli-table": "0.3.x",
     "commander": "2.3.x",
-    "connect-flash": "^0.1.1",
-    "connect-redis": "^2.1.0",
-    "cookie-parser": "^1.3.3",
+    "connect-flash": "0.1.x",
+    "connect-redis": "2.1.x",
+    "cookie-parser": "1.3.x",
     "debug": "2.0.x",
     "express": "4.9.x",
-    "express-session": "^1.8.2",
+    "express-session": "1.8.x",
     "graceful-fs": "3.0.x",
+    "html-entities": "1.1.x",
     "infant": "0.8.x",
-    "jade": "^1.7.0",
-    "markdown": "^0.5.0",
-    "mkdirp": "^0.5.0",
+    "ip": "0.3.x",
+    "jade": "1.7.x",
+    "markdown": "0.5.x",
+    "mkdirp": "0.5.x",
+    "moment": "2.8.x",
+    "moment-duration-format": "1.3.x",
     "mongoose": "3.8.x",
     "mongoose-list": "0.2.x",
     "net-ping": "1.1.x",
     "object-manage": "0.8.x",
     "promisepipe": "1.0.x",
-    "redis": "^0.12.1",
-    "shortid": "^2.0.1",
+    "redis": "0.12.x",
+    "shortid": "2.0.x",
     "socket.io": "1.1.x",
+    "ssh2": "0.3.x",
+    "stream-stream": "1.2.x",
+    "string": "2.1.x",
     "through2": "0.6.x",
     "validator": "3.19.x"
   },
